fix spacing

--- a/src/components/admin/Analytics/GraphCard.css
+++ b/src/components/admin/Analytics/GraphCard.css
@@ -8,7 +8,7 @@
 
 .aux-data {
     position: absolute;
-    top: 325px;
+    top: 350px;
 }
 
 .long {
